# api

./: .gitignore  hk.pkl  main.py  mise.toml  pyproject.toml  railpack.json  tailwind.css  yoyo.ini
.github/workflows/: docker-publish.yml  python-app.yml
api/v1/: __init__.py  auth.py
api/v1/auth/: __init__.py  utils.py
api/v1/db/: __init__.py  user_db.py
api/v1/query/: __init__.py  user_db.py
api/v2/: __init__.py  clerk.py
api/v2/notebooks/: __init__.py
migrations/: 20250515185559_create_authorized_users.rollback.sql  20250515185559_create_authorized_users.sql  20250515190610_create_login_codes.rollback.sql  20250515190610_create_login_codes.sql  20250516153211_create_make_verification_code.rollback.sql  20250516153211_create_make_verification_code.sql  20250518180303_create_get_user_database.rollback.sql  20250518180303_create_get_user_database.sql  20250518180404_create_init_user_database.rollback.sql  20250518180404_create_init_user_database.sql  20250520212226_create_api_keys.rollback.sql  20250520212226_create_api_keys.sql  20250520212751_create_delete_expired_keys.rollback.sql  20250520212751_create_delete_expired_keys.sql
shared/db/: __init__.py  test_user_db.py  user_db.py
shared/enc/: __init__.py
shared/mailer/: __init__.py
shared/settings/: __init__.py
shared/sprites/: __init__.py  services.py
static/css/: tailwind.css
static/js/: account.js  csv.js  download.js  login.js  otp.js  query.js
templates/: account.html  base.html  forms.html  icons.html  index.html  login.html  partials.html  query.html  sidebar.html  table.html
