[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.2",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "resend>=2.10.0",
    "yoyo-migrations>=9.0.0",
    "psycopg2-binary>=2.9.10",
    "poethepoet>=0.34.0",
    "jinja2>=3.1.6",
]

[tool.poe.tasks]
migrate = "yoyo apply -f -a -d $DATABASE_URL"
start = "fastapi run main.py"
